predict bug at totalcharge

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -271,9 +271,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gender                int64\n",
+      "SeniorCitizen         int64\n",
+      "Partner               int64\n",
+      "Dependents            int64\n",
+      "tenure                int64\n",
+      "PhoneService          int64\n",
+      "MultipleLines         int64\n",
+      "InternetService       int64\n",
+      "OnlineSecurity        int64\n",
+      "OnlineBackup          int64\n",
+      "DeviceProtection      int64\n",
+      "TechSupport           int64\n",
+      "StreamingTV           int64\n",
+      "StreamingMovies       int64\n",
+      "Contract              int64\n",
+      "PaperlessBilling      int64\n",
+      "PaymentMethod         int64\n",
+      "MonthlyCharges      float64\n",
+      "TotalCharges         object\n",
+      "Churn                 int64\n",
+      "dtype: object\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -328,15 +355,15 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>29.85</td>\n",
        "      <td>29.85</td>\n",
        "      <td>0</td>\n",
@@ -351,15 +378,15 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>56.95</td>\n",
        "      <td>1889.5</td>\n",
        "      <td>0</td>\n",
@@ -374,15 +401,15 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>1</td>\n",
        "      <td>53.85</td>\n",
        "      <td>108.15</td>\n",
        "      <td>1</td>\n",
@@ -397,15 +424,15 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>2</td>\n",
        "      <td>42.30</td>\n",
        "      <td>1840.75</td>\n",
        "      <td>0</td>\n",
@@ -420,15 +447,15 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
        "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>3</td>\n",
+       "      <td>0</td>\n",
        "      <td>70.70</td>\n",
        "      <td>151.65</td>\n",
        "      <td>1</td>\n",
@@ -446,28 +473,28 @@
        "4       1              0        0           0       2             1   \n",
        "\n",
        "   MultipleLines  InternetService  OnlineSecurity  OnlineBackup  \\\n",
-       "0              0                2             0.0           1.0   \n",
-       "1              1                2             1.0           0.0   \n",
-       "2              1                2             1.0           1.0   \n",
-       "3              0                2             1.0           0.0   \n",
-       "4              1                1             0.0           0.0   \n",
+       "0              0                2               1             2   \n",
+       "1              1                2               2             1   \n",
+       "2              1                2               2             2   \n",
+       "3              0                2               2             1   \n",
+       "4              1                1               1             1   \n",
        "\n",
        "   DeviceProtection  TechSupport  StreamingTV  StreamingMovies  Contract  \\\n",
-       "0               0.0          0.0          0.0              0.0         0   \n",
-       "1               1.0          0.0          0.0              0.0         1   \n",
-       "2               0.0          0.0          0.0              0.0         0   \n",
-       "3               1.0          1.0          0.0              0.0         1   \n",
-       "4               0.0          0.0          0.0              0.0         0   \n",
+       "0                 1            1            1                1         0   \n",
+       "1                 2            1            1                1         1   \n",
+       "2                 1            1            1                1         0   \n",
+       "3                 2            2            1                1         1   \n",
+       "4                 1            1            1                1         0   \n",
        "\n",
        "   PaperlessBilling  PaymentMethod  MonthlyCharges TotalCharges  Churn  \n",
-       "0                 1              3           29.85        29.85      0  \n",
-       "1                 0              2           56.95       1889.5      0  \n",
-       "2                 1              2           53.85       108.15      1  \n",
-       "3                 0              1           42.30      1840.75      0  \n",
-       "4                 1              3           70.70       151.65      1  "
+       "0                 1              0           29.85        29.85      0  \n",
+       "1                 0              1           56.95       1889.5      0  \n",
+       "2                 1              1           53.85       108.15      1  \n",
+       "3                 0              2           42.30      1840.75      0  \n",
+       "4                 1              0           70.70       151.65      1  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,9 +508,10 @@
     "gender = {'Male': 0, 'Female': 1}\n",
     "multiple_lines = {'Yes': 2, 'No': 1, 'No phone service': 0}\n",
     "internet = {'DSL': 2, 'Fiber optic': 1, 'No': 0}\n",
+    "online = {'Yes': 2, 'No' : 1, 'No internet service': 0}\n",
     "contract = {'Month-to-month': 0, 'One year': 1, 'Two year': 2}\n",
-    "payment = {'Electronic check': 3, 'Mailed check': 2, \n",
-    "           'Bank transfer (automatic)': 1, 'Credit card (automatic)': 0}\n",
+    "payment = {'Electronic check': 0, 'Mailed check': 1, \n",
+    "           'Bank transfer (automatic)': 2, 'Credit card (automatic)': 3}\n",
     "\n",
     "#convert\n",
     "data_drop['gender'] = data_drop['gender'].map(gender)\n",
@@ -492,19 +520,57 @@
     "data_drop['PhoneService'] = data_drop['PhoneService'].map(yes_no)\n",
     "data_drop['MultipleLines'] = data_drop['MultipleLines'].map(multiple_lines)\n",
     "data_drop['InternetService'] = data_drop['InternetService'].map(internet)\n",
-    "data_drop['OnlineSecurity'] = data_drop['OnlineSecurity'].map(yes_no)\n",
-    "data_drop['OnlineBackup'] = data_drop['OnlineBackup'].map(yes_no)\n",
-    "data_drop['DeviceProtection'] = data_drop['DeviceProtection'].map(yes_no)\n",
-    "data_drop['TechSupport'] = data_drop['TechSupport'].map(yes_no)\n",
-    "data_drop['StreamingTV'] = data_drop['StreamingTV'].map(yes_no)\n",
-    "data_drop['StreamingMovies'] = data_drop['StreamingMovies'].map(yes_no)\n",
+    "data_drop['OnlineSecurity'] = data_drop['OnlineSecurity'].map(online)\n",
+    "data_drop['OnlineBackup'] = data_drop['OnlineBackup'].map(online)\n",
+    "data_drop['DeviceProtection'] = data_drop['DeviceProtection'].map(online)\n",
+    "data_drop['TechSupport'] = data_drop['TechSupport'].map(online)\n",
+    "data_drop['StreamingTV'] = data_drop['StreamingTV'].map(online)\n",
+    "data_drop['StreamingMovies'] = data_drop['StreamingMovies'].map(online)\n",
     "data_drop['Contract'] = data_drop['Contract'].map(contract)\n",
     "data_drop['PaperlessBilling'] = data_drop['PaperlessBilling'].map(yes_no)\n",
     "data_drop['PaymentMethod'] = data_drop['PaymentMethod'].map(payment)\n",
     "data_drop['Churn'] = data_drop['Churn'].map(yes_no)\n",
     "\n",
     "#show\n",
+    "print(data_drop.dtypes)\n",
     "data_drop.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_churn = data_drop.drop(['Churn','TotalCharges'],axis=1).columns\n",
+    "\n",
+    "data_train, data_test = train_test_split(data_drop, test_size=0.25)\n",
+    "rf = RandomForestClassifier(n_estimators=30)\n",
+    "rf.fit(data_train[drop_churn],data_train['Churn'])\n",
+    "# data_train[drop_churn]\n",
+    "pred = rf.predict(data_test[drop_churn])\n",
+    "# display(pred)\n",
+    "# data_test[drop_churn].head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score:  0.7950028392958546\n",
+      "mean:  0.7950028392958546\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = rf.score(data_test[drop_churn],data_test['Churn'])\n",
+    "print(\"score: \",score)\n",
+    "print(\"mean: \", np.mean(pred == data_test['Churn']))"
    ]
   },
   {
