fix totalcharge but low accuracy

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -2,16 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy as sp\n",
     "import sklearn\n",
-    "%matplotlib inline\n",
-    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier"
    ]
@@ -25,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +227,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -254,24 +251,47 @@
       "       'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport',\n",
       "       'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling',\n",
       "       'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn'],\n",
-      "      dtype='object')\n"
+      "      dtype='object')\n",
+      "customerID           object\n",
+      "gender               object\n",
+      "SeniorCitizen         int64\n",
+      "Partner              object\n",
+      "Dependents           object\n",
+      "tenure                int64\n",
+      "PhoneService         object\n",
+      "MultipleLines        object\n",
+      "InternetService      object\n",
+      "OnlineSecurity       object\n",
+      "OnlineBackup         object\n",
+      "DeviceProtection     object\n",
+      "TechSupport          object\n",
+      "StreamingTV          object\n",
+      "StreamingMovies      object\n",
+      "Contract             object\n",
+      "PaperlessBilling     object\n",
+      "PaymentMethod        object\n",
+      "MonthlyCharges      float64\n",
+      "TotalCharges         object\n",
+      "Churn                object\n",
+      "dtype: object\n"
      ]
     }
    ],
    "source": [
-    "print(data.keys())"
+    "print(data.keys())\n",
+    "print(data.dtypes)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Prepare data"
+    "## Prepare and Clean data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -300,210 +320,14 @@
       "Churn                 int64\n",
       "dtype: object\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>SeniorCitizen</th>\n",
-       "      <th>Partner</th>\n",
-       "      <th>Dependents</th>\n",
-       "      <th>tenure</th>\n",
-       "      <th>PhoneService</th>\n",
-       "      <th>MultipleLines</th>\n",
-       "      <th>InternetService</th>\n",
-       "      <th>OnlineSecurity</th>\n",
-       "      <th>OnlineBackup</th>\n",
-       "      <th>DeviceProtection</th>\n",
-       "      <th>TechSupport</th>\n",
-       "      <th>StreamingTV</th>\n",
-       "      <th>StreamingMovies</th>\n",
-       "      <th>Contract</th>\n",
-       "      <th>PaperlessBilling</th>\n",
-       "      <th>PaymentMethod</th>\n",
-       "      <th>MonthlyCharges</th>\n",
-       "      <th>TotalCharges</th>\n",
-       "      <th>Churn</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>29.85</td>\n",
-       "      <td>29.85</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>34</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>56.95</td>\n",
-       "      <td>1889.5</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>53.85</td>\n",
-       "      <td>108.15</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>45</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>42.30</td>\n",
-       "      <td>1840.75</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>70.70</td>\n",
-       "      <td>151.65</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   gender  SeniorCitizen  Partner  Dependents  tenure  PhoneService  \\\n",
-       "0       1              0        1           0       1             0   \n",
-       "1       0              0        0           0      34             1   \n",
-       "2       0              0        0           0       2             1   \n",
-       "3       0              0        0           0      45             0   \n",
-       "4       1              0        0           0       2             1   \n",
-       "\n",
-       "   MultipleLines  InternetService  OnlineSecurity  OnlineBackup  \\\n",
-       "0              0                2               1             2   \n",
-       "1              1                2               2             1   \n",
-       "2              1                2               2             2   \n",
-       "3              0                2               2             1   \n",
-       "4              1                1               1             1   \n",
-       "\n",
-       "   DeviceProtection  TechSupport  StreamingTV  StreamingMovies  Contract  \\\n",
-       "0                 1            1            1                1         0   \n",
-       "1                 2            1            1                1         1   \n",
-       "2                 1            1            1                1         0   \n",
-       "3                 2            2            1                1         1   \n",
-       "4                 1            1            1                1         0   \n",
-       "\n",
-       "   PaperlessBilling  PaymentMethod  MonthlyCharges TotalCharges  Churn  \n",
-       "0                 1              0           29.85        29.85      0  \n",
-       "1                 0              1           56.95       1889.5      0  \n",
-       "2                 1              1           53.85       108.15      1  \n",
-       "3                 0              2           42.30      1840.75      0  \n",
-       "4                 1              0           70.70       151.65      1  "
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "# drop unused data\n",
-    "data_drop = data.drop(['customerID'],axis=1)\n",
+    "use_data = data.drop(['customerID'],axis=1)\n",
+    "use_data = use_data.drop(use_data.index[[488,753,936,1082,1340,3331,3826,4380,5218,6670,6754]])\n",
     "\n",
-    "#set dict\n",
+    "# set dict\n",
     "yes_no = {'Yes': 1, 'No': 0}\n",
     "gender = {'Male': 0, 'Female': 1}\n",
     "multiple_lines = {'Yes': 2, 'No': 1, 'No phone service': 0}\n",
@@ -513,64 +337,85 @@
     "payment = {'Electronic check': 0, 'Mailed check': 1, \n",
     "           'Bank transfer (automatic)': 2, 'Credit card (automatic)': 3}\n",
     "\n",
-    "#convert\n",
-    "data_drop['gender'] = data_drop['gender'].map(gender)\n",
-    "data_drop['Partner'] = data_drop['Partner'].map(yes_no)\n",
-    "data_drop['Dependents'] = data_drop['Dependents'].map(yes_no)\n",
-    "data_drop['PhoneService'] = data_drop['PhoneService'].map(yes_no)\n",
-    "data_drop['MultipleLines'] = data_drop['MultipleLines'].map(multiple_lines)\n",
-    "data_drop['InternetService'] = data_drop['InternetService'].map(internet)\n",
-    "data_drop['OnlineSecurity'] = data_drop['OnlineSecurity'].map(online)\n",
-    "data_drop['OnlineBackup'] = data_drop['OnlineBackup'].map(online)\n",
-    "data_drop['DeviceProtection'] = data_drop['DeviceProtection'].map(online)\n",
-    "data_drop['TechSupport'] = data_drop['TechSupport'].map(online)\n",
-    "data_drop['StreamingTV'] = data_drop['StreamingTV'].map(online)\n",
-    "data_drop['StreamingMovies'] = data_drop['StreamingMovies'].map(online)\n",
-    "data_drop['Contract'] = data_drop['Contract'].map(contract)\n",
-    "data_drop['PaperlessBilling'] = data_drop['PaperlessBilling'].map(yes_no)\n",
-    "data_drop['PaymentMethod'] = data_drop['PaymentMethod'].map(payment)\n",
-    "data_drop['Churn'] = data_drop['Churn'].map(yes_no)\n",
+    "# convert\n",
+    "use_data['gender'] = use_data['gender'].map(gender)\n",
+    "use_data['Partner'] = use_data['Partner'].map(yes_no)\n",
+    "use_data['Dependents'] = use_data['Dependents'].map(yes_no)\n",
+    "use_data['PhoneService'] = use_data['PhoneService'].map(yes_no)\n",
+    "use_data['MultipleLines'] = use_data['MultipleLines'].map(multiple_lines)\n",
+    "use_data['InternetService'] = use_data['InternetService'].map(internet)\n",
+    "use_data['OnlineSecurity'] = use_data['OnlineSecurity'].map(online)\n",
+    "use_data['OnlineBackup'] = use_data['OnlineBackup'].map(online)\n",
+    "use_data['DeviceProtection'] = use_data['DeviceProtection'].map(online)\n",
+    "use_data['TechSupport'] = use_data['TechSupport'].map(online)\n",
+    "use_data['StreamingTV'] = use_data['StreamingTV'].map(online)\n",
+    "use_data['StreamingMovies'] = use_data['StreamingMovies'].map(online)\n",
+    "use_data['Contract'] = use_data['Contract'].map(contract)\n",
+    "use_data['PaperlessBilling'] = use_data['PaperlessBilling'].map(yes_no)\n",
+    "use_data['PaymentMethod'] = use_data['PaymentMethod'].map(payment)\n",
+    "use_data['Churn'] = use_data['Churn'].map(yes_no)\n",
     "\n",
-    "#show\n",
-    "print(data_drop.dtypes)\n",
-    "data_drop.head()"
+    "test = np.array([2,421,42,2])\n",
+    "\n",
+    "# for index,x in enumerate(test):\n",
+    "#     print(index,x)\n",
+    "# df = pd.DataFrame(test)\n",
+    "# df.drop(df.index[[0,3]])\n",
+    "\n",
+    "# show\n",
+    "# print(float(use_data['TotalCharges'][0]))\n",
+    "\n",
+    "for index,x in enumerate(use_data['TotalCharges']):\n",
+    "    try:\n",
+    "        x = float(x)\n",
+    "    except ValueError:\n",
+    "        print(\"exception\", x, index)\n",
+    "\n",
+    "print(use_data.dtypes)\n",
+    "\n",
+    "# use_data['TotalCharges']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Make Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "drop_churn = data_drop.drop(['Churn','TotalCharges'],axis=1).columns\n",
+    "train_data = use_data.drop(['Churn'],axis=1)\n",
     "\n",
-    "data_train, data_test = train_test_split(data_drop, test_size=0.25)\n",
-    "rf = RandomForestClassifier(n_estimators=30)\n",
-    "rf.fit(data_train[drop_churn],data_train['Churn'])\n",
-    "# data_train[drop_churn]\n",
-    "pred = rf.predict(data_test[drop_churn])\n",
-    "# display(pred)\n",
-    "# data_test[drop_churn].head()"
+    "X_train, X_test, y_train, y_test = train_test_split(train_data, use_data['Churn'], random_state = 0)\n",
+    "rf = RandomForestClassifier(n_estimators=30, random_state=0)\n",
+    "rf.fit(X_train,y_train)\n",
+    "pred = rf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score:  0.7950028392958546\n",
-      "mean:  0.7950028392958546\n"
+      "score:  0.7906712172923777\n",
+      "mean:  0.7906712172923777\n"
      ]
     }
    ],
    "source": [
-    "score = rf.score(data_test[drop_churn],data_test['Churn'])\n",
-    "print(\"score: \",score)\n",
-    "print(\"mean: \", np.mean(pred == data_test['Churn']))"
+    "print(\"score: \",rf.score(X_test,y_test))\n",
+    "print(\"mean: \", np.mean(pred == y_test))"
    ]
   },
   {
