clean code but low accuracy

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -291,13 +291,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "exception   488\n",
+      "exception   753\n",
+      "exception   936\n",
+      "exception   1082\n",
+      "exception   1340\n",
+      "exception   3331\n",
+      "exception   3826\n",
+      "exception   4380\n",
+      "exception   5218\n",
+      "exception   6670\n",
+      "exception   6754\n",
       "gender                int64\n",
       "SeniorCitizen         int64\n",
       "Partner               int64\n",
@@ -316,7 +327,7 @@
       "PaperlessBilling      int64\n",
       "PaymentMethod         int64\n",
       "MonthlyCharges      float64\n",
-      "TotalCharges         object\n",
+      "TotalCharges        float64\n",
       "Churn                 int64\n",
       "dtype: object\n"
      ]
@@ -325,7 +336,6 @@
    "source": [
     "# drop unused data\n",
     "use_data = data.drop(['customerID'],axis=1)\n",
-    "use_data = use_data.drop(use_data.index[[488,753,936,1082,1340,3331,3826,4380,5218,6670,6754]])\n",
     "\n",
     "# set dict\n",
     "yes_no = {'Yes': 1, 'No': 0}\n",
@@ -355,25 +365,21 @@
     "use_data['PaymentMethod'] = use_data['PaymentMethod'].map(payment)\n",
     "use_data['Churn'] = use_data['Churn'].map(yes_no)\n",
     "\n",
-    "test = np.array([2,421,42,2])\n",
-    "\n",
-    "# for index,x in enumerate(test):\n",
-    "#     print(index,x)\n",
-    "# df = pd.DataFrame(test)\n",
-    "# df.drop(df.index[[0,3]])\n",
-    "\n",
-    "# show\n",
-    "# print(float(use_data['TotalCharges'][0]))\n",
-    "\n",
+    "# check null index in totalcharge\n",
     "for index,x in enumerate(use_data['TotalCharges']):\n",
     "    try:\n",
-    "        x = float(x)\n",
+    "        float(x)\n",
     "    except ValueError:\n",
     "        print(\"exception\", x, index)\n",
+    "        \n",
+    "# drop unused row\n",
+    "use_data = use_data.drop(use_data.index[[488,753,936,1082,1340,3331,3826,4380,5218,6670,6754]])\n",
+    "        \n",
+    "# convert to float\n",
+    "use_data[\"TotalCharges\"] = use_data.TotalCharges.astype(float)\n",
     "\n",
-    "print(use_data.dtypes)\n",
-    "\n",
-    "# use_data['TotalCharges']"
+    "# show type\n",
+    "print(use_data.dtypes)"
    ]
   },
   {
@@ -385,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 45,
    "metadata": {
     "scrolled": false
    },
@@ -401,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -417,13 +423,6 @@
     "print(\"score: \",rf.score(X_test,y_test))\n",
     "print(\"mean: \", np.mean(pred == y_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
