--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -386,42 +386,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Split Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = use_data.drop(['Churn'],axis=1)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(train_data, use_data['Churn'], random_state = 0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Make Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "train_data = use_data.drop(['Churn'],axis=1)\n",
-    "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train_data, use_data['Churn'], random_state = 0)\n",
     "rf = RandomForestClassifier(n_estimators=30, random_state=0)\n",
     "rf.fit(X_train,y_train)\n",
-    "pred = rf.predict(X_test)"
+    "pred_rf = rf.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score:  0.7906712172923777\n",
-      "mean:  0.7906712172923777\n"
+      "score rf:  0.7906712172923777\n",
+      "mean rf:  0.7906712172923777\n"
      ]
     }
    ],
    "source": [
-    "print(\"score: \",rf.score(X_test,y_test))\n",
-    "print(\"mean: \", np.mean(pred == y_test))"
+    "print(\"score rf: \",rf.score(X_test,y_test))\n",
+    "print(\"mean rf: \", np.mean(pred_rf == y_test))"
    ]
   }
  ],
