delete fix seed

--- a/churn_prediction.ipynb
+++ b/churn_prediction.ipynb
@@ -397,7 +397,7 @@
    "source": [
     "train_data = use_data.drop(['Churn'],axis=1)\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(train_data, use_data['Churn'], random_state = 0)"
+    "X_train, X_test, y_train, y_test = train_test_split(train_data, use_data['Churn'])"
    ]
   },
   {
@@ -415,7 +415,7 @@
    },
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=30, random_state=0)\n",
+    "rf = RandomForestClassifier(n_estimators=30)\n",
     "rf.fit(X_train,y_train)\n",
     "pred_rf = rf.predict(X_test)"
    ]
@@ -429,8 +429,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "score rf:  0.7906712172923777\n",
-      "mean rf:  0.7906712172923777\n"
+      "score rf:  0.7940841865756542\n",
+      "mean rf:  0.7940841865756542\n"
      ]
     }
    ],
